@@ -798,9 +798,9 @@ void G4ProcessManager::SetProcessOrderingToSecond(
     }
   }
 
-  // set ordering parameter to 1
-  pAttr->ordProcVector[ivec-1] = 1;
-  pAttr->ordProcVector[ivec]   = 1;
+  // set ordering parameter to 0
+  pAttr->ordProcVector[ivec-1] = 0;
+  pAttr->ordProcVector[ivec]   = 0;
 
   // find insert position
   G4ProcessVector* pVector = theProcVector[ivec];
